rsass/tests/spec/non_conformant/errors/import/file/test_loop/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/file/loop"

fn runner() -> crate::TestRunner {
    super::runner().with_cwd("loop")
}

mod each;

mod test_for;

mod test_while;
